--- a/frontend/assets/app.css
+++ b/frontend/assets/app.css
@@ -14,7 +14,7 @@ body {
   color: #333;
 }
 .color {
-  color: #e81c4f;
+  color: #3070b3;
 }
 
 .page-container {
@@ -30,7 +30,7 @@ header {
   /* background-color: #eee; */
 }
 header .title {
-  color: #e81c4f;
+  color: #3070b3;
   margin-right: 1.5em;
   /* font-size: 80%; */
 }
@@ -60,9 +60,55 @@ article {
   flex: 1;
   font-size: 105%;
 }
+
+.filters-bar {
+  margin: 1rem 0;
+}
+.filter-form {
+  display: inline-block;
+}
+
 .existing-filter.being-edited {
   opacity: 0.5;
 }
+button:not(:disabled):not(.disabled) {
+  cursor: pointer; 
+}
+button, select, .filter-inputs {
+  user-select: none;
+  border: 1px solid;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  border-radius: .4rem;
+
+  color: #212529;
+
+  background-color: #dbe2e9;
+  border-color: #afc7df;
+}
+button.filter-button, .filter-inputs {
+  background-color: #e2e4d0;
+  border-color: #b4b977;
+}
+
+.button-group {
+  margin-right: 1rem;
+}
+.button-group button, .button-group .filter-inputs {
+  border-radius: 0;
+}
+.button-group button:first-child, .button-group .filter-inputs:first-child {
+  border-top-left-radius: .4rem;
+  border-bottom-left-radius: .4rem;
+}
+.button-group button:last-child, .button-group .filter-inputs:last-child {
+  border-top-right-radius: .4rem;
+  border-bottom-right-radius: .4rem;
+}
+
+
+
+
 .document {
   margin: 2ex 0;
 }
@@ -91,14 +137,14 @@ ul.folder-list ul.folder-list {
 }
 .details .header .metadatatype
 {
-  color: #e81c4f;
+  color: #3070b3;
 }
 
 .folder-head {
   transition: color .2s;
 }
 .folder-head.selected {
-  color: #e81c4f;
+  color: #a0af00;
 }
 .folder-head .folder-name {
   padding-left: 0.6em;
@@ -135,7 +181,7 @@ ul.folder-list ul.folder-list {
 }
 
 .article .error {
-  color: #e81c4f;
+  color: #3070b3;
 }
 .breadcrumbs {
   font-size: 80%;
