--- a/frontend/assets/app.css
+++ b/frontend/assets/app.css
@@ -100,6 +100,9 @@ button, select, .filter-inputs {
   background-color: #f4f4f4;
   border-color: #e6e6e6;
 }
+button.selected {
+  border: 2px solid #999
+}
 button.filter-button, .filter-inputs {
   /*
   background-color: #e2e4d0;
