Use error viewing function from Utils.Html

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -204,7 +204,7 @@ ul.folder-list ul.folder-list {
   transform: translate(-50%, -50%);
 }
 
-.article .error {
+.error {
   color: #3070b3;
 }
 .breadcrumbs {
