Render highlighted search terms in FTS listings

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -145,6 +145,9 @@ button.filter-button, .filter-inputs {
 .attribute.title {
   font-style: italic;
 }
+.attribute .highlight {
+  color: red;
+}
 .folder-list {
   list-style-type: none;
   padding-left: 0;
