Listed facet values are now specified by aspect name
instead of specified by attribute key.

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -298,6 +298,6 @@ ul.folder-list ul.folder-list {
 .facet-value-count {
   margin-left: 0.2em;
 }
-.facet-keys-input {
+.facet-aspects-input {
   
 }
