Layout of global search bar like aspect search bars

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -92,6 +92,9 @@ article {
   background: none;
   border: none;
 }
+.submit-buttons {
+  text-align: right;
+}
 /*
 .input-group > * {
   border-radius: 0;
