--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -47,6 +47,18 @@ header .title {
 header .subtitle {
   font-size: 80%;
 }
+.language-select {
+  margin-right: 20px;
+  font-size: initial;
+  font-weight: initial;
+}
+.language-select .selected {
+  font-weight: bold;
+}
+.language-select .language-option:hover {
+  text-decoration: underline;
+}
+
 main {
   flex: 1;
   display: flex;
@@ -312,7 +324,4 @@ ul.folder-list ul.folder-list {
 }
 .facet-value-count {
   margin-left: 0.2em;
-}
-.facet-aspects-input {
-  
 }
