--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -268,6 +268,10 @@ ul.folder-list ul.folder-list {
 .residence .title {
   font-weight: bold;
 }
+.details .search-matching{
+  margin-top: 4ex;
+  font-weight: bold;
+}
 .breadcrumbs {
   font-size: 80%;
   color: #737373
