--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -37,15 +37,13 @@ header {
   flex: 0;
   border-bottom: 1px solid gray;
   padding-bottom: 1ex;
-  /* background-color: #eee; */
 }
-header .title {
+header .tum-header {
+  margin: 21px 0 30px 0;
+  line-height: initial;
+}
+header .tum-links a {
   color: #3070b3;
-  margin-right: 1.5em;
-  /* font-size: 80%; */
-}
-header .subtitle {
-  font-size: 80%;
 }
 header .language-select {
   margin-right: 20px;
