Explain the option to highlight unparsable Html

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -231,9 +231,11 @@ a.document:hover {
 .attribute .highlight-search-term {
   background-color: #d5de70;
 }
+/* For development and testing: Highlight unparsable Html with an eye-catching background-color
 .attribute .unparsable {
-  background-color: rgb(255, 0, 255);
+  background-color: rgb(238, 2, 238);
 }
+*/
 .no-more-results {
   font-style: italic;
 }
