--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -278,6 +278,25 @@ a.document:hover {
   font-size: 80%;
   color: var(--color-text-light);
 }
+.listing .document {
+  display: flex;
+}
+.listing .document .thumbnail {
+  flex: 0 1 auto;
+  margin-right: 1em;
+  min-width: 3em;
+  max-width: 30%;
+}
+.listing .document .thumbnail img {
+  width: 100%;
+  height: auto;
+  max-width: 128px;
+  max-height: 128px;
+}
+.listing .document .description {
+  flex: 1 1 0;
+  width: 15em;
+}
 .listing .attributes {
   margin-left: 2em;
 }
