--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -73,11 +73,11 @@ body, input {
   color: var(--color-primary);
 }
 
-a {
+a, .text-button {
   color: var(--color-primary-lighter);
   text-decoration: none;
 }
-a:hover {
+a:hover, .text-button:hover {
   text-decoration: underline;
 }
 
@@ -371,6 +371,12 @@ ul.folder-list ul.folder-list {
 
 .article {
   position: relative;
+}
+.article .thumbnail-switch{
+  float: right;
+  margin-left: 1em;
+  font-size: 80%;
+  color: var(--color-text-light);
 }
 .spinner {
   width: 3em;
