Move aspect search buttons above aspect search inputs

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -155,6 +155,7 @@ article {
 .search-bar {
   display: flex;
   align-items: center;
+  margin-top: 10px;
   margin-bottom: 10px;
 }
 .search-bar  .search-label {
