Highlight facet box on selecting from upper navigation

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -463,6 +463,13 @@ ul.folder-list ul.folder-list {
 .facet-box {
   margin-top: 1ex;
 }
+.facet-box {
+  border: 2px solid var(--color-nav-background);
+  transition: border-color 2s cubic-bezier(0, 1.59, 0.76, 1.1);
+}
+.facet-box.highlight {
+  border: 2px solid var(--color-primary);
+}
 .facet-head {
   display: flex;
 }
