Render BibTex link in details view

--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -400,6 +400,13 @@ ul.folder-list ul.folder-list {
 {
   color: var(--color-primary);
 }
+.details .bibtex {
+  margin: 1ex 0;
+}
+.details .bibtex img {
+  vertical-align: middle;
+  margin-right: 0.4em;
+}
 
 .folder-head {
   display: flex;
