--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -470,6 +470,7 @@ ul.folder-list ul.folder-list {
 }
 .residence {
   margin-top: 4ex;
+  line-height: normal;
 }
 .residence .title {
   font-weight: bold;
@@ -478,11 +479,11 @@ ul.folder-list ul.folder-list {
   margin-top: 4ex;
   font-weight: bold;
 }
-.breadcrumbs {
+.details .breadcrumbs {
   font-size: 80%;
   color: var(--color-text-light);
 }
-.breadcrumbs a {
+.details .breadcrumbs a {
   color: inherit;
 }
 .article .details table {
