--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -207,7 +207,7 @@ article {
   height: 1.2ex;
 }
 .fixed-facet-filter .separator {
-  margin: 0 0.4em;
+  margin: 0 0.45em 0 0.3em;
 }
 .bottom-controls {
   min-height: 36px;
@@ -222,6 +222,10 @@ article {
   position: absolute;
   bottom: 0;
   right: 0;
+}
+
+.separator {
+  margin: 0 0.3em;
 }
 
 /* Remove some builtin-styles for input fields in webkit, chrome, ie */
