--- a/frontend/src/assets/app.css
+++ b/frontend/src/assets/app.css
@@ -154,12 +154,14 @@ aside nav {
 main {
   flex: 8;
 }
+/*
 main .thumbnail-switch {
   float: right;
   margin-left: 1em;
   font-size: 80%;
   color: var(--color-text-light);
 }
+*/
 main .iterator-view {
   height: 100%;
   display: flex;
@@ -171,8 +173,17 @@ main .iterator-view .iterator-header {
   display: flex;
   align-items: center;
 }
-main .iterator-view .iterator-header > div {
-    flex: 1 0;
+main .iterator-view .iterator-header > .result-number {
+  flex: 1 1 content;
+  min-width: 11em;
+}
+main .iterator-view .iterator-header > .iterator-buttons {
+  flex: 1 0 content;
+  text-align: center;
+}
+main .iterator-view .iterator-header > .thumbnail-switch {
+  flex: 2 1 content;
+  text-align: right;
 }
 article {
   height: 100%;
